--- a/templates/collectd.conf.j2
+++ b/templates/collectd.conf.j2
@@ -4,7 +4,7 @@
 # General options
 Interval     {{ collectd_interval }}
 ReadThreads  {{ collectd_readthreads }}
-TypesDB "{{collectd_additional_types_db_path}}"
+#TypesDB "{{collectd_additional_types_db_path}}"
 TypesDB "{{collectd_types_db_path}}"
 {% if collectd_hostname %}Hostname {{ collectd_hostname }}
 {% endif %}
